--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artist's Landing Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="flexible">
+        <div class="half-width">
+                <h1>
+                    Stay Focused on <br>
+                    <span>Mission 2022</span>
+                </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vel qui, voluptatibus quia reiciendis dolore nemo tempora fugiat mollitia eaque laborum minus vero ipsa optio, quo hic est autem rem!</p>
+            <a href="#">Explore Now</a>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-4.png" alt="hero">
+        </div>
+    </section>
 </body>
 </html>
