heading section divided into two part

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 <body>
     <section class="flexible">
         <div class="half-width">
-                <h1>
-                    Stay Focused on <br>
-                    <span>Mission 2022</span>
-                </h1>
+                <div class="vertical-line">
+                    <h1>
+                        Stay Focused on <br>
+                        <span class="word-color">Mission 2022</span>
+                    </h1>
+                </div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vel qui, voluptatibus quia reiciendis dolore nemo tempora fugiat mollitia eaque laborum minus vero ipsa optio, quo hic est autem rem!</p>
             <a href="#">Explore Now</a>
         </div>
