--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vel qui, voluptatibus quia reiciendis dolore nemo tempora fugiat mollitia eaque laborum minus vero ipsa optio, quo hic est autem rem!</p>
             
-            <a href="#">Explore Now</a>
+            <a class="button-link" target="_blank" href="#">Explore Now</a>
+            <p class="gap">Scroll down to Explore more!</p>
         </div>
-        
+
         <div class="half-width">
             <img src="images/person/person-4.png" alt="hero">
         </div>
