--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
             <img src="images/person/person-4.png" alt="hero">
         </div>
     </section>
+
+    <section>
+        <h2>My Mission in <span class="word-color">2022</span></h2>
+    </section>
 </body>
 </html>
