three part divided

--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
 
     <section>
         <h2>My Mission in <span class="word-color">2022</span></h2>
+        <div class="flexible">
+            <div class="one-third-width">
+                <img src="images/illustrators/illustrator-1.png" alt="mission">
+                <h3>Mission</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae quidem earum excepturi eos ducimus at neque porro nulla natus tempora repellat quaerat accusantium consequuntur perspiciatis, voluptate pariatur voluptatem provident magnam?</p>
+            </div>
+            <div class="one-third-width">
+                <img src="images/illustrators/illustrator-2.png" alt="vision">
+                <h3>Vision</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius facilis, provident at adipisci sit similique modi ipsam reprehenderit fuga suscipit inventore ratione quia repellat sunt ipsum rerum aliquid dolorum.</p>
+            </div>
+            <div class="one-third-width">
+                <img src="images/illustrators/illustrator-3.png" alt="goals">
+                <h3>Goals</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deserunt in libero exercitationem quae voluptatum illo sequi eius nemo? Commodi, libero! Dolorum voluptatum necessitatibus, ea porro voluptatem cum at nemo?</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
