--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
         </div>
     </section>
 
-    <section class="gap">
-
+    <section class="flexible gap">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="discussion">
+        </div>
+        
+        <div class="half-width">
+            <h2>Develop without Limits</h2>
+        </div>
     </section>
 </body>
 </html>
