third section working

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         </div>
         
         <div class="half-width">
-            <h2>Develop without Limits</h2>
+            <h3>Develop without Limits</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, rerum! Laudantium modi repellat omnis libero soluta iure. Iste molestias vel debitis tempora quo itaque temporibus repellat! Dolores, ratione. Quo, unde.</p>
         </div>
     </section>
 </body>
