third section completed

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
     </section>
 
     <section class="flexible gap">
-        <div class="half-width">
+        <div id="develop-limit" class="one-third-width">
             <img src="images/pictures/coding.png" alt="discussion">
         </div>
         
         <div class="half-width">
-            <h3>Develop without Limits</h3>
+            <h3>Develop <br> without Limits</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, rerum! Laudantium modi repellat omnis libero soluta iure. Iste molestias vel debitis tempora quo itaque temporibus repellat! Dolores, ratione. Quo, unde.</p>
+            <a class="button-link" target="_blank" href="#">Read the Documentation</a>
         </div>
     </section>
 </body>
