bonus section completed

--- a/index.html
+++ b/index.html
@@ -61,5 +61,38 @@
             <a class="button-link" target="_blank" href="#">Read the Documentation</a>
         </div>
     </section>
+
+    <section class="flexible gap">
+        <div class="half-width">
+            <h3>Know our <br> Global Community</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam earum nihil officia ipsum perferendis commodi itaque. Cum voluptas eum, beatae vel iste, placeat laudantium illo eveniet numquam qui libero? Eum.</p>
+            <a class="button-link" target="_blank" href="#">Join the Community</a>
+        </div>
+        <div id="community" class="one-third-width">
+            <img src="images/pictures/project.png" alt="community">
+        </div>
+    </section>
+
+    <section>
+        <h2>Our <span class="word-color">Team</span></h2>
+        <div class="flexible">
+            <div class="one-third-width box2">
+                <img src="images/person/person-0.png" alt="front-end-developer">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
+                <h3>Mission</h3>
+            </div>
+            <div class="one-third-width box1">
+                <img src="images/person/person-1.png" alt="back-end-developer">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
+                <h3>Mission</h3>
+            </div>
+            <div class="one-third-width box2">
+                <img src="images/person/person-3.png" alt="full-stack-developer">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
+                <h3>Mission</h3>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
