--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
     </section>
 
-    <section>
-        <h2>Our <span class="word-color">Team</span></h2>
+    <section class="gap">
+        <h2>Meet Our <span class="word-color">Team</span></h2>
         <div class="flexible">
             <div class="one-third-width box2">
                 <img src="images/person/person-0.png" alt="front-end-developer">
@@ -93,6 +93,11 @@
             </div>
         </div>
     </section>
+
+    <footer class="gap">
+        <h4>Mission <span class="word-color">2022</span></h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </footer>
 
 </body>
 </html>
