--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <span class="word-color">Mission 2022</span>
             </h1>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vel qui, voluptatibus quia reiciendis dolore nemo tempora fugiat mollitia eaque laborum minus vero ipsa optio, quo hic est autem rem!</p>
+            <p>Hi there! My name is Kuddus. I am a junior web developer. I like tech stuff and making websites is fun. Recently I have started learning web development in a hardcore manner. So, wish me luck. To know more about me check out my website please.</p>
             
-            <a class="button-link" target="_blank" href="#">Explore Now</a>
+            <a class="button-link" target="_blank" href="https://www.google.com/">Explore Now</a>
             <p class="gap">Scroll down to Explore more!</p>
         </div>
 
@@ -35,17 +35,17 @@
             <div class="one-third-width box1">
                 <img src="images/illustrators/illustrator-1.png" alt="mission">
                 <h3>Mission</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem autem accusantium tempore odit expedita harum ex officiis minima repellendus.</p>
+                <p>My mission in 2022 is to become a full stack web developer. I know this is not an easy path at the begning. But I'll try my hard and sole.</p>
             </div>
             <div class="one-third-width box2">
                 <img src="images/illustrators/illustrator-2.png" alt="vision">
                 <h3>Vision</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem autem accusantium tempore odit expedita harum ex officiis minima repellendus.</p>
+                <p>Well web development is something that can't be replace with something easy for my foreseeable future. Yeah ofcourse if you're just an ordinary developer how can just do one or two thing then you'll be replaced soon enough. But I want to be a hardcore developer which can't be replace by automation that easily.</p>
             </div>
             <div class="one-third-width box1">
                 <img src="images/illustrators/illustrator-3.png" alt="goals">
                 <h3>Goals</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum dolorem autem accusantium tempore odit expedita harum ex officiis minima repellendus.</p>
+                <p>I like tech stuff and making website seems fun to me. So, I wanna build my career in this sector. I want to be good at my job and also enjoy doing the work.</p>
             </div>
         </div>
     </section>
@@ -57,16 +57,16 @@
         
         <div class="half-width">
             <h3>Develop <br> without Limits</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, rerum! Laudantium modi repellat omnis libero soluta iure. Iste molestias vel debitis tempora quo itaque temporibus repellat! Dolores, ratione. Quo, unde.</p>
-            <a class="button-link" target="_blank" href="#">Read the Documentation</a>
+            <p>Well I just started learning web development. Just learned HTML and CSS. I have a long way to go. So, how can I confine myself within some limits? I'll learn without limits and develop with limit too.</p>
+            <a class="button-link" target="_blank" href="https://www.wikipedia.org/">Read the Documentation</a>
         </div>
     </section>
 
     <section class="flexible gap">
         <div class="half-width">
             <h3>Know our <br> Global Community</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam earum nihil officia ipsum perferendis commodi itaque. Cum voluptas eum, beatae vel iste, placeat laudantium illo eveniet numquam qui libero? Eum.</p>
-            <a class="button-link" target="_blank" href="#">Join the Community</a>
+            <p>Developing work is all about team work. Now a days in a Gobal village everyone is connected. So, show your work and join the community show off your work. By doing so you'll keep learing and your knowledge will grow expoentially.</p>
+            <a class="button-link" target="_blank" href="https://github.com/dipti-heroine">Join the Community</a>
         </div>
         <div id="community" class="one-third-width">
             <img src="images/pictures/project.png" alt="community">
@@ -78,25 +78,25 @@
         <div class="flexible">
             <div class="one-third-width box2">
                 <img src="images/person/person-2.png" alt="front-end-developer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
-                <h3>Mission</h3>
+                <p>An excellent front-end-developer and a serious person. You don't wanna mess around him.</p>
+                <h3>Kashem</h3>
             </div>
             <div class="one-third-width box1">
-                <img src="images/person/person-1.png" alt="back-end-developer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
-                <h3>Mission</h3>
+                <img src="images/person/person-1.png" alt="full-stack-developer">
+                <p>The funny guy and know it all. Our lead developer</p>
+                <h3>Kuddus</h3>
             </div>
             <div class="one-third-width box2">
-                <img src="images/person/person-5.png" alt="full-stack-developer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptates.</p>
-                <h3>Mission</h3>
+                <img src="images/person/person-5.png" alt="back-end-developer">
+                <p>The man who is the backbone of our team. Our back-end-developer. He is quite simillar to our funny guy.</p>
+                <h3>Abul</h3>
             </div>
         </div>
     </section>
 
     <footer class="gap">
         <h4>Mission <span class="word-color">2022</span></h4>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <p>Consistency is the KEY to Completion</p>
     </footer>
 
 </body>
